2008-02-29  Douglas Gregor  <doug.gregor@gmail.com>

	PR c++/35315
	* g++.dg/ext/attrib32.C: New.

2008-02-29  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2008-02-27  Uros Bizjak  <ubizjak@gmail.com>

	PR middle-end/19984
	* gcc.dg/pr19984.c: New test.
	* gcc.dg/dfp/compare-special.h: Use _nan instead of nan as the
	name of the variable.

	2008-02-27 Uros Bizjak <ubizjak@gmail.com>

	PR target/25477
	* config/darwin-ppc-ldouble-patch.def (BUILT_IN_NANL): Add.

2008-02-28  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2008-02-25  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	PR libfortran/24685
	* gfortran.dg/large_real_kind_form_io_2.f90: XFAIL on
	powerpc*-apple-darwin*.
	* gfortran.dg/large_real_kind_2.F90: Split testing of ERF and
	ERFC into gfortran.dg/large_real_kind_3.F90.
	* gfortran.dg/large_real_kind_3.F90: New test.

2008-02-27  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2008-02-27  Richard Guenther  <rguenther@suse.de>

	PR middle-end/35390
	* gcc.c-torture/execute/pr35390.c: New testcase.

	PR middle-end/34971
	* gcc.c-torture/execute/pr34971.c: New testcase.

2008-02-27  Jakub Jelinek  <jakub@redhat.com>

	PR c++/35368
	* g++.dg/ext/visibility/typeinfo2.C: New test.
	* g++.dg/ext/visibility/typeinfo3.C: New test.

2008-02-26  Joseph Myers  <joseph@codesourcery.com>

	* gcc.dg/bf-ms-attrib.c (main): Return 0.

2008-02-26  Joseph Myers  <joseph@codesourcery.com>

	* gcc.target/i386/mmx-4.c (dump64_64): Use printf %I64 on MinGW.
	* gcc.target/i386/sse-6.c (dump128_64): Likewise.

2008-02-25  Joseph Myers  <joseph@codesourcery.com>

	* gcc.target/i386/pr25993.c: Skip on *-*-mingw*.

2008-02-25  Joseph Myers  <joseph@codesourcery.com>

	* gcc.dg/debug/dwarf2/aranges-fnsec-1.c: Add -w to dg-options.

2008-02-25  Joseph Myers  <joseph@codesourcery.com>

	* gcc.dg/builtins-config.h: Disable C99 runtime testing for
	Windows.

2008-02-25  Joseph Myers  <joseph@codesourcery.com>
