@@ -1,5 +1,8 @@
 /* { dg-require-effective-target vect_int } */
 
+#include <stdlib.h>
+#include "tree-vect.h"
+
 int ca[100];
 
 __attribute__ ((noinline))
@@ -13,6 +16,16 @@ void foo (int n)
 
 int main (void)
 {
+  int i;
+
+  check_vect ();
+
+  foo(100);
+
+  for (i = 0; i < 100; ++i) {
+    if (ca[i] != 2)
+      abort();
+  }
   return 0;
 }
 
